--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://gwc-uncc.github.io/Girls-Who-Code-at-UNCC/"
+baseURL = "https://bluelotus03.github.io/Girls-Who-Code-at-UNCC/"
 languageCode = "en-us"
 summarylength = 25
 theme = "roxo"
